Add leftover to main pattern folder

--- a/patterns/card/icon-card.html
+++ b/patterns/card/icon-card.html
@@ -45,6 +45,13 @@
       <h2 class="info-item push-1-2 zetta">Item Name</h2>
       <div class="info-container pad-t-1-4 pad-b-1-4">
         <ul class="list-group-inline push-0">
+
+          <li class="gutter-1-4 link-box rating rated rating-box ratings-one"></li>
+          <li class="gutter-1-4 link-box rating rated rating-box ratings-two"></li>
+          <li class="gutter-1-4 link-box rating rated rating-box ratings-three"></li>
+          <li class="gutter-1-4 link-box rating rated rating-box ratings-four"></li>
+          <li class="push-r-1-2 gutter-1-4 link-box rating rating-box ratings-five"></li>
+
           <li><a class="link-box" href="#">7 reviews</a></li> <b class="separator">|</b>
           <li><a class="link-box" href="#">Make a Review</a></li>
         </ul>
