--- a/patterns/icons/1-icons.html
+++ b/patterns/icons/1-icons.html
@@ -37,7 +37,7 @@
   </svg>
 
   <ul class="patternbot-icon-display patternbot-list-group list-group-inline ">
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -76,46 +76,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
-      <div class="text-center">
-        <div class="patternbot-icon-display-left island-1-2">
-          <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
-          </i>
-        </div>
-        <div class="patternbot-icon-display-right center-contents island-1-2">
-          <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
-          </i>
-          <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
-          </i>
-          <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
-          </i>
-        </div>
-      </div>
-      <div class="text-center patternbot-color-body">
-        <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
-        </i>
-        <span class="icon-label ib">
-          <code class="micro" style="">
-            #facebook
-          </code>
-        </span>
-        <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: facebook" aria-label="Copy icon: facebook" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#facebook&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
-            <i class="icon i-18 patternbot-color-body">
-              <svg>
-                <use xlink:href="#icon-copy"  style=""></use>
-              </svg>
-            </i>
-          </button>
-        </span>
-      </div>
-    </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -154,7 +115,46 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#facebook" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #facebook
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: facebook" aria-label="Copy icon: facebook" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#facebook&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -193,7 +193,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -232,7 +232,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -271,7 +271,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -310,7 +310,85 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#grid-view-selected" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#grid-view-selected" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#grid-view-selected" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#grid-view-selected" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#grid-view-selected" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #grid-view-selected
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: grid-view-selected" aria-label="Copy icon: grid-view-selected" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#grid-view-selected&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#grid-view" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#grid-view" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#grid-view" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#grid-view" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#grid-view" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #grid-view
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: grid-view" aria-label="Copy icon: grid-view" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#grid-view&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -349,7 +427,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -388,7 +466,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -427,7 +505,85 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#list-view-selected" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#list-view-selected" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#list-view-selected" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#list-view-selected" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#list-view-selected" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #list-view-selected
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: list-view-selected" aria-label="Copy icon: list-view-selected" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#list-view-selected&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#list-view" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#list-view" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#list-view" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#list-view" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#list-view" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #list-view
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: list-view" aria-label="Copy icon: list-view" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#list-view&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -466,46 +622,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
-      <div class="text-center">
-        <div class="patternbot-icon-display-left island-1-2">
-          <i class="icon i-128 block">
-            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
-          </i>
-        </div>
-        <div class="patternbot-icon-display-right center-contents island-1-2">
-          <i class="icon i-64 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
-          </i>
-          <i class="icon i-32 block push-1-8">
-            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
-          </i>
-          <i class="icon i-18 block">
-            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
-          </i>
-        </div>
-      </div>
-      <div class="text-center patternbot-color-body">
-        <i class="icon i-24 patternbot-color-body">
-          <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
-        </i>
-        <span class="icon-label ib">
-          <code class="micro" style="">
-            #snapchat
-          </code>
-        </span>
-        <span class="icon-label ib">
-          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: snapchat" aria-label="Copy icon: snapchat" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#snapchat&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
-            <i class="icon i-18 patternbot-color-body">
-              <svg>
-                <use xlink:href="#icon-copy"  style=""></use>
-              </svg>
-            </i>
-          </button>
-        </span>
-      </div>
-    </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -544,7 +661,46 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
+      <div class="text-center">
+        <div class="patternbot-icon-display-left island-1-2">
+          <i class="icon i-128 block">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+        </div>
+        <div class="patternbot-icon-display-right center-contents island-1-2">
+          <i class="icon i-64 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+          <i class="icon i-32 block push-1-8">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+          <i class="icon i-18 block">
+            <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+          </i>
+        </div>
+      </div>
+      <div class="text-center patternbot-color-body">
+        <i class="icon i-24 patternbot-color-body">
+          <svg><use xlink:href="../../images/icons.svg#snapchat" /></svg>
+        </i>
+        <span class="icon-label ib">
+          <code class="micro" style="">
+            #snapchat
+          </code>
+        </span>
+        <span class="icon-label ib">
+          <button class="center-contents-vertical patternbot-tool-btn pattern-copy-btn" title="Copy icon: snapchat" aria-label="Copy icon: snapchat" data-clipboard-text="&lt;i class=&quot;icon i-18&quot;&gt;&lt;svg&gt;&lt;use xlink:href=&quot;images/icons.svg#snapchat&quot;&gt;&lt;/use&gt;&lt;/svg&gt;&lt;/i&gt;" hidden>
+            <i class="icon i-18 patternbot-color-body">
+              <svg>
+                <use xlink:href="#icon-copy"  style=""></use>
+              </svg>
+            </i>
+          </button>
+        </span>
+      </div>
+    </li>
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -583,7 +739,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
@@ -622,7 +778,7 @@
         </span>
       </div>
     </li>
-    <li class="pad-b-1-2" style="">
+    <li class="pad-b-1-2 gutter-1-4 push" style="">
       <div class="text-center">
         <div class="patternbot-icon-display-left island-1-2">
           <i class="icon i-128 block">
