--- a/patterns/navigation/filter.html
+++ b/patterns/navigation/filter.html
@@ -15,16 +15,12 @@
 <body>
 
   <div class="filter gutter">
-    <div class="">
-
-    </div>
     <div class="filter-section max-length">
       <div class="filter-price">
-        <fieldset class="gutter">
 
-
-          <div class="filter-section-title">
-            <legend class="pad-t-1-2 pad-b-1-2 bold peta">Price</legend>
+        <fieldset class="field-padding">
+          <div class="filter-section-title pad-t">
+            <legend class="pad-t-1-2 pad-b-1-2 bold peta gutter-2">Price</legend>
           </div>
           <div class="gutter">
             <ul class="list-group">
@@ -50,8 +46,6 @@
           <button type="submit" name="button">
             <a class="btn btn-drop pad-t"><span aria-label="Filter">Filter<i></i></span></a>
           </button>
-
-
 
       </fieldset>
       </div>
