--- a/patterns/card/cart-item.html
+++ b/patterns/card/cart-item.html
@@ -19,7 +19,7 @@
     <div class="unit [ xs-1 s-1 m-1-3 l-1-3] push">
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
-    <div class="unit [ xs-1 s-1 m-2-3 l-2-3] gutter">
+    <div class="unit [ xs-1 s-1 m-2-3 l-2-3] gutter pad-b">
       <h3 class="pad-b-1-2 push-1-2">Item Name</h3>
       <p class="push-1-2">$$$$</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
