Add final changes to current html and css

--- a/patterns/banner/home-banner.html
+++ b/patterns/banner/home-banner.html
@@ -13,16 +13,17 @@
 
 </head>
 <body>
-  <div class="banner relative">
-    <div class="home-text-image-banner">
-      <div class="wrapper gutter-2 home-text-box-banner absolute pin-tl">
-        <h1 class="pad-t-2">Home of the Rubik</h1>
-        <p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+  <main id="main" role="main" tabindex="0">
+    <div class="banner relative">
+      <div class="home-text-image-banner" aria-details="banner-image-of-one-of-our-rubik's-cube">
+        <div class="wrapper gutter-2 home-text-box-banner absolute pin-tl">
+          <h1 class="pad-t-2">Home of the Rubik</h1>
+          <p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
       </div>
     </div>
-
-  </div>
-
+  </main>
 
 </body>
 </html>
