--- a/patterns/card/basic-card.html
+++ b/patterns/card/basic-card.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-  <div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-1-2">
+  <div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-2">
     <div class="unit [ xs-1 s-1 m-1-2 l-1-2] push">
       <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
     </div>
