--- a/patterns/card/info-card.html
+++ b/patterns/card/info-card.html
@@ -19,7 +19,7 @@
     <a class="link-box" href="#">
     <div class="grid">
       <div class="unit [ xs-1 s-1 m-1 l-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
-        <img class="img-flex" src="../../images/chess-pieces.jpg" alt="">
+        <img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
       </div>
       <div class="unit [ xs-1 s-1 m-1 l-1 ] ">
         <div class="text-info pad-t-2 gutter">
