--- a/patterns/card/popular-sell.html
+++ b/patterns/card/popular-sell.html
@@ -18,7 +18,7 @@
 
   <div class="grid popular-sell">
     <div class="unit [ xs-1 s-1-3 m-1-4 l-1-4]">
-      <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
+      <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="image-of-our-different-variety-of-rubik-product">
     </div>
     <div class="unit [ xs-1 s-2-3 m-3-4 l-3-4] gutter">
       <h3 class="h3-separator pad-b-1-2">NEW Releases</h3>
