--- a/patterns/footer/footer.html
+++ b/patterns/footer/footer.html
@@ -13,34 +13,29 @@
 </head>
 <body>
 
-  <footer>
-
+  <footer role="contentinfo" id="footer">
     <section class="footer-section">
       <div class="grid valign-middle">
 
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
             <span class="bold footer-section-heading mega push-1-2">Customer Service</span>
-            <li><a class="link-box footer-section-text"href="#">Option 1</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 2</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 3</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 4</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 5</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 6</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 7</a></li>
+            <li><p class="link-box footer-section-text push-0"href="#">Manuals</p></li>
+            <li><p class="link-box footer-section-text push-0"href="#">Offers</p></li>
+            <li><p class="link-box footer-section-text push-0"href="#">Manuals</p></li>
+            <li><p class="link-box footer-section-text push-0"href="#">Competitions</p></li>
           </ul>
         </div>
 
         <div class="unit [ xs-1 m-1-3 ] island">
           <ul class="list-group push-0">
             <span class="bold footer-section-heading mega push-1-2">Company info</span>
-            <li><a class="link-box footer-section-text"href="#">Option 1</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 2</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 3</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 4</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 5</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 6</a></li>
-            <li><a class="link-box footer-section-text"href="#">Option 7</a></li>
+            <li><a class="link-box footer-section-text"href="../../pages/index.html">HomePage</a></li>
+            <li><a class="link-box footer-section-text"href="../../pages/product-list.html">Product Page</a></li>
+            <li><a class="link-box footer-section-text"href="../../pages/product-detail.html"></a></li>
+            <li><a class="link-box footer-section-text"href="../../pages/checkout.html">Option 1</a></li>
+
+
           </ul>
         </div>
 
@@ -51,9 +46,6 @@
               <ul class="list-group pad-t">
                 <span class="bold footer-section-heading mega push-1-2">Feature</span>
                 <li><a class="link-box footer-section-text"href="#">Option 1</a></li>
-                <li><a class="link-box footer-section-text"href="#">Option 2</a></li>
-                <li><a class="link-box footer-section-text"href="#">Option 3</a></li>
-                <li><a class="link-box footer-section-text"href="#">Option 4</a></li>
               </ul>
             </div>
 
