--- a/index.html
+++ b/index.html
@@ -227,6 +227,22 @@
           </li>
         </ul>
       </nav>
+        <hr>
+        <h2 class="italic kilo normal gutter push-1-2">Pages</h2>
+        <nav class="nav mega">
+          <ul class="list-group">
+              <li>
+                <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/home.html" target="_blank">
+                  <div class="relative">
+                    <span>Home</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-pop-out" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
+          </ul>
+        </nav>
     </header>
 
     <main class="main">
@@ -851,15 +867,16 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="banner-home-banner-code-sample-copy-chunk">&lt;div class="banner relative"&gt;
-  &lt;div class="home-text-image-banner">
-    &lt;div class="wrapper gutter-2 home-text-box-banner absolute pin-tl">
-      &lt;h1 class="pad-t-2">Home of the Rubik&lt;/h1>
-      &lt;p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
+              <code><pre id="banner-home-banner-code-sample-copy-chunk">&lt;main id="main" role="main" tabindex="0"&gt;
+  &lt;div class="banner relative">
+    &lt;div class="home-text-image-banner" aria-details="banner-image-of-one-of-our-rubik&apos;s-cube">
+      &lt;div class="wrapper gutter-2 home-text-box-banner absolute pin-tl">
+        &lt;h1 class="pad-t-2">Home of the Rubik&lt;/h1>
+        &lt;p class="island max-length">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.&lt;/p>
+      &lt;/div>
     &lt;/div>
   &lt;/div>
-
-&lt;/div>
+&lt;/main>
 </pre></code>
             </div>
           </div>
@@ -1101,7 +1118,7 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-1-2"&gt;
+              <code><pre id="card-basic-card-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-2"&gt;
   &lt;div class="unit [ xs-1 s-1 m-1-2 l-1-2] push">
     &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
   &lt;/div>
@@ -1173,9 +1190,9 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-1-2"&gt;
+              <code><pre id="card-cart-item-code-sample-copy-chunk">&lt;div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b"&gt;
   &lt;div class="unit [ xs-1 s-1 m-1-3 l-1-3] push">
-    &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
+    &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
   &lt;/div>
   &lt;div class="unit [ xs-1 s-1 m-2-3 l-2-3] gutter pad-b">
     &lt;h3 class="pad-b-1-2 push-1-2">Item Name&lt;/h3>
@@ -1251,40 +1268,61 @@
               <code><pre id="card-icon-card-code-sample-copy-chunk">&lt;div class="main-card"&gt;
   &lt;div class="grid gutter-1-2 pad-t-1-2">
 
-    &lt;div class="unit [ xs-1 s-1 m-1-3 l-1-3]">
-      &lt;div class="grid">
+    &lt;div class="unit [ xs-1 s-1 l-1-4]">
+      &lt;ul class="grid list-group relative">
 
-        &lt;div class="unit [ s-1 ] ">
-          &lt;img class="img-flex" src="../../images/wrench.jpg" alt="">
-        &lt;/div>
-        &lt;div class="unit [ s-1 ] pad-t">
-          &lt;div class="grid">
-            &lt;div class="unit [ xs-1-3 ] gutter-1-8">
-              &lt;img class="img-flex" src="../../images/wrench.jpg" alt="">
+        &lt;li class="unit [ s-1 ] relative img-display-main">
+          &lt;div class="embed embed-3by2 push" id="img-div">
+            &lt;img id="img-shown-one" class="img-display embed-item current-img" src="../../images/wrench.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
+            &lt;img id="img-shown-two" class="img-display embed-item" src="../../images/chess-pieces.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
+            &lt;img id="img-shown-three" class="img-display embed-item" src="../../images/variation-rubik.jpg" aria-details="image-of-a-wrench-fixing-a-cube">
+          &lt;/div>
+          &lt;div class="grid small-img-show">
+            &lt;div class="unit [ xs-1-3 ] gutter-1-8 current-img-s">
+              &lt;a href="#img-shown-one">
+                  &lt;img class="img-flex" src="../../images/wrench.jpg" aria-details="image-of-a-wrench-fixing-a-cube-second-view">
+                &lt;/a>
             &lt;/div>
             &lt;div class="unit [ xs-1-3 ] gutter-1-8">
-              &lt;img class="img-flex" src="../../images/wrench.jpg" alt="">
+              &lt;a href="#img-shown-two">
+                  &lt;img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="iimage-of-a-wrench-fixing-a-cube-fourth-view">
+                &lt;/a>
             &lt;/div>
             &lt;div class="unit [ xs-1-3 ] gutter-1-8">
-              &lt;img class="img-flex" src="../../images/wrench.jpg" alt="">
+              &lt;a href="#img-shown-three">
+                  &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="image-of-a-wrench-fixing-a-cube-third-view">
+                &lt;/a>
             &lt;/div>
           &lt;/div>
-        &lt;/div>
+        &lt;/li>
 
-      &lt;/div>
+        &lt;a href="#img-div" class="absolute button-gallery button-l" arial-label="Previous">
+          &lt;i class="icon i-64">&lt;svg>&lt;use xlink:href="../../images/icons.svg#img-arrow-l"/>&lt;/svg>&lt;/i>
+        &lt;/a>
+        &lt;a href="#img-div" class=" absolute button-gallery button-r" arial-label="Next">
+          &lt;i class="icon i-64">&lt;svg>&lt;use xlink:href="../../images/icons.svg#img-arrow-r"/>&lt;/svg>&lt;/i>
+        &lt;/a>
+
+      &lt;/ul>
     &lt;/div>
 
-    &lt;div class="unit [ xs-1 s-1 m-2-3 l-2-3] gutter pad-t-1-2">
-
+    &lt;div class="unit [ xs-1 s-1 l-3-4] gutter pad-t-1-2">
       &lt;h2 class="info-item push-1-2 zetta">Item Name&lt;/h2>
       &lt;div class="info-container pad-t-1-4 pad-b-1-4">
         &lt;ul class="list-group-inline push-0">
 
-          &lt;li class="gutter-1-4 link-box rating rated rating-box ratings-one">&lt;/li>
-          &lt;li class="gutter-1-4 link-box rating rated rating-box ratings-two">&lt;/li>
-          &lt;li class="gutter-1-4 link-box rating rated rating-box ratings-three">&lt;/li>
-          &lt;li class="gutter-1-4 link-box rating rated rating-box ratings-four">&lt;/li>
-          &lt;li class="push-r-1-2 gutter-1-4 link-box rating rating-box ratings-five">&lt;/li>
+          &lt;li>
+            &lt;input type="radio" id="rating-one" name="rating">
+            &lt;input type="radio" id="rating-two" name="rating">
+            &lt;input type="radio" id="rating-three" name="rating">
+            &lt;input type="radio" id="rating-four" name="rating">
+            &lt;input type="radio" id="rating-five" name="rating">
+            &lt;label class="hide-custom-input" for="rating-one">&lt;/label>
+            &lt;label for="rating-two">&lt;/label>
+            &lt;label for="rating-three">&lt;/label>
+            &lt;label for="rating-four">&lt;/label>
+            &lt;label for="rating-five">&lt;/label>
+          &lt;/li>
 
           &lt;li>&lt;a class="link-box" href="#">7 reviews&lt;/a>&lt;/li> &lt;b class="separator">|&lt;/b>
           &lt;li>&lt;a class="link-box" href="#">Make a Review&lt;/a>&lt;/li>
@@ -1305,7 +1343,6 @@
       &lt;div class="push-2">
         &lt;a class="btn btn-small btn-save btn-small-flip pad-t">&lt;span aria-label="Save">Save&lt;i>&lt;/i>&lt;/span>&lt;/a>
         &lt;a class="btn btn-small btn-cart btn-small-reverse push-r-2 pad-t">&lt;span aria-label="Cart">Cart&lt;i>&lt;/i>&lt;/span>&lt;/a>
-
       &lt;/div>
     &lt;/div>
 
@@ -1375,7 +1412,7 @@
   &lt;a class="link-box" href="#">
     &lt;div class="grid">
       &lt;div class="unit [ xs-1 s-1 m-1 l-1 ] gutter-1-2 pad-t-1-2 pad-b-1-2">
-        &lt;img class="img-flex" src="../../images/chess-pieces.jpg" alt="">
+        &lt;img class="img-flex" src="../../images/chess-pieces.jpg" aria-details="image-of-our-a-chess-piece">
       &lt;/div>
       &lt;div class="unit [ xs-1 s-1 m-1 l-1 ] ">
         &lt;div class="text-info pad-t-2 gutter">
@@ -1449,7 +1486,7 @@
               </button>
               <code><pre id="card-popular-sell-code-sample-copy-chunk">&lt;div class="grid popular-sell"&gt;
   &lt;div class="unit [ xs-1 s-1-3 m-1-4 l-1-4]">
-    &lt;img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
+    &lt;img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="image-of-our-different-variety-of-rubik-product">
   &lt;/div>
   &lt;div class="unit [ xs-1 s-2-3 m-3-4 l-3-4] gutter">
     &lt;h3 class="h3-separator pad-b-1-2">NEW Releases&lt;/h3>
@@ -1526,34 +1563,37 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="footer-footer-code-sample-copy-chunk">&lt;footer&gt;
-
+              <code><pre id="footer-footer-code-sample-copy-chunk">&lt;footer role="contentinfo" id="footer"&gt;
   &lt;section class="footer-section">
     &lt;div class="grid valign-middle">
 
       &lt;div class="unit [ xs-1 m-1-3 ] island">
         &lt;ul class="list-group push-0">
           &lt;span class="bold footer-section-heading mega push-1-2">Customer Service&lt;/span>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 1&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 2&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 3&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 4&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 5&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 6&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 7&lt;/a>&lt;/li>
+          &lt;li>
+            &lt;p class="link-box footer-section-text push-0" href="#">Manuals&lt;/p>
+          &lt;/li>
+          &lt;li>
+            &lt;p class="link-box footer-section-text push-0" href="#">Offers&lt;/p>
+          &lt;/li>
+          &lt;li>
+            &lt;p class="link-box footer-section-text push-0" href="#">Manuals&lt;/p>
+          &lt;/li>
+          &lt;li>
+            &lt;p class="link-box footer-section-text push-0" href="#">Competitions&lt;/p>
+          &lt;/li>
         &lt;/ul>
       &lt;/div>
 
       &lt;div class="unit [ xs-1 m-1-3 ] island">
         &lt;ul class="list-group push-0">
           &lt;span class="bold footer-section-heading mega push-1-2">Company info&lt;/span>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 1&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 2&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 3&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 4&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 5&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 6&lt;/a>&lt;/li>
-          &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 7&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text" href="../../pages/index.html">HomePage&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text" href="../../pages/product-list.html">Product Page&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text" href="../../pages/product-detail.html">&lt;/a>&lt;/li>
+          &lt;li>&lt;a class="link-box footer-section-text" href="../../pages/checkout.html">Option 1&lt;/a>&lt;/li>
+
+
         &lt;/ul>
       &lt;/div>
 
@@ -1564,9 +1604,6 @@
             &lt;ul class="list-group pad-t">
               &lt;span class="bold footer-section-heading mega push-1-2">Feature&lt;/span>
               &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 1&lt;/a>&lt;/li>
-              &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 2&lt;/a>&lt;/li>
-              &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 3&lt;/a>&lt;/li>
-              &lt;li>&lt;a class="link-box footer-section-text" href="#">Option 4&lt;/a>&lt;/li>
             &lt;/ul>
           &lt;/div>
 
@@ -2384,27 +2421,44 @@
                   <svg><use xlink:href="#icon-copy"></use></svg>
                 </i>
               </button>
-              <code><pre id="header-header-code-sample-copy-chunk">&lt;div class="nav-bar"&gt;
-  &lt;input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
-  &lt;div class="input-toggle">
-    &lt;label class="link-box toggle-btn icon i-64 absolute pin-tr" for="nav-check">
-      &lt;i class="icon i-64 absolute toggle-click">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle"/>&lt;/svg>&lt;/i>
-      &lt;i class="icon i-64 absolute toggle-clicked">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle-down"/>&lt;/svg>&lt;/i>
-    &lt;/label>
-  &lt;/div>
+              <code><pre id="header-header-code-sample-copy-chunk">&lt;ul class="skip-links"&gt;
+  &lt;li>&lt;a href="#main"> Jump to Main Content&lt;/a>&lt;/li>
+  &lt;li>&lt;a href="#nav">Jump to Navigation bar&lt;/a>&lt;/li>
+&lt;/ul>
 
-  &lt;nav class="nav-bar pad-t pad-b valign-middle text-center nav-bar-toggle">
-    &lt;ul id="nav-items" class="list-group push-0 pad-b-1-2">
-      &lt;li class="gutter-1-4 bold hover-nav current">&lt;a class="link-box" href="#">Home&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#">New Releases&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#">Rubriks&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#">Offers&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#">Manual&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#">More Puzzles&lt;/a>&lt;/li>
-      &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#">Competitions&lt;/a>&lt;/li>
-    &lt;/ul>
-  &lt;/nav>
-&lt;/div>
+&lt;header class="text-center" role="banner" id="id" tabindex="0">
+  &lt;div class="header-logo grid grid-middle valign-middle text-center island-2">
+    &lt;div class="unit [ xs-1-3 ] text-right">
+      &lt;i class="icon i-64">
+            &lt;img src="../../images/logo-64.svg" alt="">
+          &lt;/i>
+    &lt;/div>
+    &lt;div class="unit [ xs-2-3 ] text-left">
+      &lt;span class="tena bold rubikas-logo-text">Rubikas&lt;/span>
+    &lt;/div>
+  &lt;/div>
+  &lt;div class="nav-bar">
+    &lt;input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
+    &lt;div class="input-toggle">
+      &lt;label class="link-box toggle-btn icon i-64 absolute pin-tr" for="nav-check">
+        &lt;i class="icon i-64 absolute toggle-click">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle"/>&lt;/svg>&lt;/i>
+        &lt;i class="icon i-64 absolute toggle-clicked">&lt;svg>&lt;use xlink:href="../../images/icons.svg#toggle-down"/>&lt;/svg>&lt;/i>
+      &lt;/label>
+    &lt;/div>
+
+    &lt;nav class="nav-bar pad-t pad-b valign-middle text-center nav-bar-toggle" role="navigation" id="#nav">
+      &lt;ul id="nav-items" class="list-group push-0 pad-b-1-2">
+        &lt;li class="gutter-1-4 bold hover-nav current">&lt;a class="link-box" href="#" aria-details="Go back to Homepage">Home&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Check out the list of New Releases">New Releases&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Take a better look at our Rubiks">Rubiks&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Get a look at our list of offers">Offers&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Read the right Manual how to solve your cube">Manual&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Check the other Puzzles we carry">More Puzzles&lt;/a>&lt;/li>
+        &lt;li class="gutter-1-4 bold hover-nav">&lt;a class="link-box" href="#" aria-details="Sign up and be part of our Competitons">Competitions&lt;/a>&lt;/li>
+      &lt;/ul>
+    &lt;/nav>
+  &lt;/div>
+&lt;/header>
 </pre></code>
             </div>
           </div>
@@ -2607,11 +2661,11 @@
               </button>
               <code><pre id="navigation-bread-crumbs-code-sample-copy-chunk">&lt;nav id="#nav"&gt;
   &lt;ul class="list-group-inline breadcrumb valign-bottom">
-    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Home&lt;b class="inline normal">&gt;&lt;/b>&lt;/a>&lt;/li>
-    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Product list&lt;b class="inline normal">&gt;&lt;/b>&lt;a>&lt;/a>&lt;/a>
+    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Home &lt;b class="inline normal">&gt;&lt;/b>&lt;/a>&lt;/li>
+    &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Product list &lt;b class="inline normal">&gt;&lt;/b>&lt;a>&lt;/a>&lt;/a>
     &lt;/li>
     &lt;li>&lt;a class="link-box peta gutter-1-8" href="#">Rubik &lt;b class="inline normal">&gt;&lt;/b>&lt;/a>&lt;/li>
-    &lt;li class="peta gutter-1-8">Item selected 01&lt;/li>
+    &lt;li class="peta gutter-1-8">Current Item&lt;/li>
   &lt;/ul>
 &lt;/nav>
 </pre></code>
