--- a/patterns/card/cart-item.html
+++ b/patterns/card/cart-item.html
@@ -15,9 +15,9 @@
 </head>
 <body>
 
-  <div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b-1-2">
+  <div class="grid cart-item main-card gutter-1-2 pad-t-1-2 pad-b">
     <div class="unit [ xs-1 s-1 m-1-3 l-1-3] push">
-      <img class="img-flex" src="../../images/variation-rubik.jpg" alt="">
+      <img class="img-flex" src="../../images/variation-rubik.jpg" aria-details="iimage-of-our-variety-of-different-rubiks-cube">
     </div>
     <div class="unit [ xs-1 s-1 m-2-3 l-2-3] gutter pad-b">
       <h3 class="pad-b-1-2 push-1-2">Item Name</h3>
