--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -14,26 +14,44 @@
 </head>
 <body>
 
-    <div class="nav-bar">
-      <input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
-      <div class="input-toggle">
-        <label class="link-box toggle-btn icon i-64 absolute pin-tr" for="nav-check">
-          <i class="icon i-64 absolute toggle-click"><svg><use xlink:href="../../images/icons.svg#toggle"></use></svg></i>
-          <i class="icon i-64 absolute toggle-clicked"><svg><use xlink:href="../../images/icons.svg#toggle-down"></use></svg></i>
-        </label>
-      </div>
+    <ul class="skip-links">
+      <li><a href="#main"> Jump to Main Content</a></li>
+      <li><a href="#nav">Jump to Navigation bar</a></li>
+    </ul>
 
-      <nav class="nav-bar pad-t pad-b valign-middle text-center nav-bar-toggle">
-        <ul id="nav-items" class="list-group push-0 pad-b-1-2">
-          <li class="gutter-1-4 bold hover-nav current"><a class="link-box" href="#">Home</a></li>
-          <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#">New Releases</a></li>
-          <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#">Rubriks</a></li>
-          <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#">Offers</a></li>
-          <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#">Manual</a></li>
-          <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#">More Puzzles</a></li>
-          <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#">Competitions</a></li>
-        </ul>
-      </nav>
-  </div>
+    <header class="text-center" role="banner" id="id" tabindex="0">
+      <div class="header-logo grid grid-middle valign-middle text-center island-2">
+        <div class="unit [ xs-1-3 ] text-right">
+          <i class="icon i-64">
+            <img src="../../images/logo-64.svg" alt="">
+          </i>
+        </div>
+        <div class="unit [ xs-2-3 ] text-left">
+          <span class="tena bold rubikas-logo-text">Rubikas</span>
+        </div>
+      </div>
+      <div class="nav-bar">
+        <input type="checkbox" class="nav-check hide-custom-input" id="nav-check">
+        <div class="input-toggle">
+          <label class="link-box toggle-btn icon i-64 absolute pin-tr" for="nav-check">
+            <i class="icon i-64 absolute toggle-click"><svg><use xlink:href="../../images/icons.svg#toggle"></use></svg></i>
+            <i class="icon i-64 absolute toggle-clicked"><svg><use xlink:href="../../images/icons.svg#toggle-down"></use></svg></i>
+          </label>
+        </div>
+
+        <nav class="nav-bar pad-t pad-b valign-middle text-center nav-bar-toggle" role="navigation" id=#nav>
+          <ul id="nav-items" class="list-group push-0 pad-b-1-2">
+            <li class="gutter-1-4 bold hover-nav current"><a class="link-box" href="#" aria-details="Go back to Homepage">Home</a></li>
+            <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#" aria-details="Check out the list of New Releases">New Releases</a></li>
+            <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#" aria-details="Take a better look at our Rubiks">Rubiks</a></li>
+            <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#" aria-details="Get a look at our list of offers">Offers</a></li>
+            <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#" aria-details="Read the right Manual how to solve your cube">Manual</a></li>
+            <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#" aria-details="Check the other Puzzles we carry">More Puzzles</a></li>
+            <li class="gutter-1-4 bold hover-nav"><a class="link-box" href="#" aria-details="Sign up and be part of our Competitons">Competitions</a></li>
+          </ul>
+        </nav>
+    </header>
+
+
 </body>
 </html>
