--- a/patterns/header/header.html
+++ b/patterns/header/header.html
@@ -12,17 +12,17 @@
   <link href="header.css" rel="stylesheet">
 </head>
 <body>
-  <header class="masthead grid grid-middle island-1-2">
+  <header class="masthead grid">
     <div class="logo unit xs-1 s-1 m-1 l-1-4">
-      <h1 class="push-0 gutter-1-4 pad-b-1-4">Garden Life</h1>
+      <h1 class="push-0 wrapper island">Garden Life</h1>
     </div>
     <nav class="nav unit xs-1 s-1 m-1 l-3-4">
       <ul class="list-group-inline push-0">
-        <li class="island-1-8">
+        <li class="island">
           <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Home</a>
         </li>
         <li class="island-1-8">
-          <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Products</a>
+          <a class="text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Products</a>
         </li>
         <li class="island-1-8">
           <a class="block text-center gutter pad-t-1-4 pad-b-1-4 milli" href="#">Contact</a>
