--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Home • Garden life</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="../../common/patternbot.js"></script>
+  <script src="../common/patternbot.js"></script>
 </head>
 <body>
   <script type="application/json" data-pattern="header/header"></script>
@@ -13,7 +13,7 @@
     <script type="application/json" data-pattern="cards/product-card"></script>
   </div>
   <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-2">
-  <script type="application/json" data-pattern="cards/product-card"></script>
+    <script type="application/json" data-pattern="cards/product-card"></script>
   </div>
   <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-2">
     <script type="application/json" data-pattern="cards/product-card"></script>
