Fixed banner and home

--- a/index.html
+++ b/index.html
@@ -241,6 +241,16 @@
                   </div>
                 </a>
               </li>
+              <li>
+                <a class="gutter pad-t-1-4 pad-b-1-4 block page-pop" href="pages/products.html" target="_blank">
+                  <div class="relative">
+                    <span>Products</span>
+                    <i class="icon i-18 absolute pin-cr">
+                      <svg><use xlink:href="#icon-pop-out" /></svg>
+                    </i>
+                  </div>
+                </a>
+              </li>
           </ul>
         </nav>
     </header>
@@ -1169,24 +1179,6 @@
                 </i>
               </button>
               <code><pre id="cards-product-card-code-sample-copy-chunk">&lt;a class="productcard island" href="#"&gt;
-  &lt;div class="embed embed-1by1">
-    &lt;img class="embed-item img-flex" src="https://placehold.it/20by40" alt="">
-  &lt;/div>
-  &lt;div class="island-1-2 text-center">
-    &lt;h3 class="push-0 mega">Heres a product shot&lt;/h3>
-    &lt;p class="italic milli">Pricing and other info&lt;/p>
-  &lt;/div>
-&lt;/a>
-&lt;a class="productcard island" href="#">
-  &lt;div class="embed embed-1by1">
-    &lt;img class="embed-item img-flex" src="https://placehold.it/20by40" alt="">
-  &lt;/div>
-  &lt;div class="island-1-2 text-center">
-    &lt;h3 class="push-0 mega">Heres a product shot&lt;/h3>
-    &lt;p class="italic milli">Pricing and other info&lt;/p>
-  &lt;/div>
-&lt;/a>
-&lt;a class="productcard island" href="#">
   &lt;div class="embed embed-1by1">
     &lt;img class="embed-item img-flex" src="https://placehold.it/20by40" alt="">
   &lt;/div>
