--- a/pages/home.html
+++ b/pages/home.html
@@ -4,19 +4,22 @@
   <meta charset="utf-8">
   <title>Home • Garden life</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <script src="../common/patternbot.js"></script>
+  <script src="../../common/patternbot.js"></script>
 </head>
 <body>
   <script type="application/json" data-pattern="header/header"></script>
   <script type="application/json" data-pattern="banner/banner"></script>
-  <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-2">
-    <script type="application/json" data-pattern="cards/product-card"></script>
-  </div>
-  <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-2">
-    <script type="application/json" data-pattern="cards/product-card"></script>
-  </div>
-  <div class="unit xs-1 s-1 m-hidden l-1-3 island-1-2">
-    <script type="application/json" data-pattern="cards/product-card"></script>
+
+  <div class="grid pad-t pad-b">
+    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1">
+      <script type="application/json" data-pattern="cards/product-card"></script>
+    </div>
+    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1">
+      <script type="application/json" data-pattern="cards/product-card"></script>
+    </div>
+    <div class="unit xs-1 s-1 m-hidden l-1-3 island-1">
+      <script type="application/json" data-pattern="cards/product-card"></script>
+    </div>
   </div>
   <script type="application/json" data-pattern="footer/footer"></script>
 </body>
