--- a/patterns/banner/banner.html
+++ b/patterns/banner/banner.html
@@ -17,6 +17,7 @@
     <header class="relative banner">
       <div class="absolute w-1 pin-bc island-2 banner-content text-center">
         <h1 class="tera gutter">Get all the greenary you need here!</h1>
+        <p>Shop online to get all your gardening needs here at garden life! We sell tools, seeds and other gardening items you need to start your own.</p>
         <div>
           <a class="btn" href="#">Shop Now</a>
         </div>
